# lista-compras-android

./: .gitignore  CORRECAO_KIVYMD.md  Dockerfile  GUIA_GITHUB.md  GUIA_SWIPE.md  INICIO_RAPIDO.md  INSTRUCOES_APK.md  LICENSE  MELHORIAS_ATUALIZAR_LISTA.md  MELHORIAS_BUSCA.md  MELHORIAS_INTERFACE.md  MELHORIAS_PRECOS.md  MELHORIA_FEEDBACK.md  README.md  REVISAO_ADICIONAR_TIPO.md  apk.py  app.py  build_apk_linux.sh  compras.db  database.py  database_apk.py  database_app.py  database_lixeira.py  exemplo.py  exemplo_swipe.py  main.py  main_v1.py  pyproject.toml  requirements.txt  teste_swipe.py
.github/workflows/: build-apk.yml
