[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Lista de Compras"
bundle = "com.henrique"
version = "1.0.0"
description = "Aplicativo de lista de compras com KivyMD"
author = "Henrique"
author_email = "henrique@example.com"
license = "MIT"
sources = [
    "apk.py",
    "database_apk.py",
    "database_app.py", 
    "database_lixeira.py",
    "database.py",
    "main.py",
    "compras.db"
]

[tool.briefcase.app.listacompras]
formal_name = "Lista de Compras"
description = "Aplicativo de lista de compras com KivyMD"
main_module = "main"
icon = "resources/icon"

[tool.briefcase.app.listacompras.android]
requires = [
    "kivy[base]==2.3.0",
    "kivymd==2.0.1.dev0",
    "certifi",
    "charset-normalizer",
    "idna",
    "requests",
    "urllib3"
]
permissions = [
    "android.permission.INTERNET",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_EXTERNAL_STORAGE"
]
build_gradle_dependencies = []
build_gradle_extra_content = ""
